Issue #3266216 by mherchel, rkoller: The section-titles in the preview section on views edit pages have a too low contrast

--- a/core/themes/claro/css/theme/views_ui.admin.theme.css
+++ b/core/themes/claro/css/theme/views_ui.admin.theme.css
@@ -720,7 +720,7 @@ td.group-title {
   display: inline-block;
   margin-top: 0;
   margin-bottom: 0;
-  color: #818181;
+  color: #55565b;
   font-size: 0.8125rem;
   font-weight: normal;
   line-height: 1.6154;
